--- a/index.html
+++ b/index.html
@@ -82,27 +82,27 @@
 
         <div class = "item">
         <img src="administrator.png" alt="Administrator" />
-        <p>Mrs. Karen Smith</p>
+        <p class="caption">Mrs. Karen Smith</p>
         </div>
 
         <div class="item">
         <img src="talentrecruiters.png" alt="Talent recruiters" />
-        <p>Talent recruit team 2025</p>
+        <p class="caption">Talent recruit team 2025</p>
         </div>
 
         <div class="item">
         <img src="vocalcoach.png" alt="Lead Vocal Coach" />
-        <p>Mr. Leon Vitro</p>
+        <p class="caption">Mr. Leon Vitro</p>
         </div>
 
         <div class="item">
         <img src="theatredep.png" alt="Lead Acting Coach" />
-        <p>Mrs. Anne Wong</p>
+        <p class="caption">Mrs. Anne Wong</p>
         </div>
 
         <div class="item">
         <img src="dancedep.png" alt="Lead Choreo"/>
-        <p>Dance Crew 2025</p>
+        <p class="caption">Dance Crew 2025</p>
         </div>
       </div>
     </div>
